--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,6 +27,10 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.AllowGlobalClipPlane=True
+r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.AutoExposure.Method=2
+r.DefaultFeature.AutoExposure.Bias=15.844444
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 bEnableWorldPartition=False
