ajout de la flashlight et du scanner + little modif map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,6 +31,7 @@ r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Method=2
 r.DefaultFeature.AutoExposure.Bias=15.844444
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
+r.CustomDepth=3
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 bEnableWorldPartition=False
