--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -42,3 +42,17 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/SwitchWorld")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/SwitchWorld")
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=251098194BAD2503FBD97D82E0082EA4
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
